# green-wheel

./: .gitignore  AI_USAGE.md  ARCHITECTURE.md  ARCHITECTURE.mermaid  ARCHITECTURE_DIAGRAMS.md  DOCKER_DNS_FIX.md  PROJECT_ARCHITECTURE_GUIDE.md  README.md  docker-compose.prod.yml  docker-compose.yml  fix-and-start.bat  reset.bat  reset.sh  start.bat
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/adapters/: circuit_breaker.py  exchange_rate.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  events.py  exchange_rates.py  health.py  users.py  wallets.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  redis.py  session.py
backend/app/dependencies/: __init__.py
backend/app/events/: lifespan.py
backend/app/exceptions/: __init__.py
backend/app/middleware/: exception_handler.py  rate_limit.py
backend/app/models/: __init__.py
backend/app/repositories/: base.py  exchange_rate_repository.py  user_repository.py  wallet_repository.py
backend/app/schemas/: user.py  wallet.py
backend/app/services/: auth_service.py  exchange_rate_service.py  user_service.py  wallet_service.py
backend/app/utils/: events.py
backend/app/workers/: celery_app.py  tasks.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx
infra/docker/: init.sql
infra/monitoring/: prometheus.yml
tests/: conftest.py
(+21 files in other folders)
